--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "node-forge": "^1.3.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+     "dotenv": "^16.4.7",
   }
 }
