--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "mongoose": "^8.9.5",
     "node-forge": "^1.3.1",
     "nodemon": "^3.1.9",
-     "dotenv": "^16.4.7",
+     "dotenv": "^16.4.7"
   }
 }
